# Blabla

./: .dockerignore  .env.example  DEMO_INSTRUCTIONS.md  Makefile  README.md  RVC_TrainingV2.ipynb  coqui_XTTS_v2_colab.ipynb  demo.html  docker-compose.dev.yml  docker-compose.yml  gui.html  server.js  start-gui.py
backend/: conftest.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  simple_main.py
backend/models/: audio_analyzer.py  audio_processor.py  tts_service.py  voice_manager.py  voice_trainer.py
backend/schemas/: api_models.py
backend/tests/integration/: test_tts_pipeline.py  test_voice_cloning_pipeline.py
backend/tests/unit/: test_api_endpoints.py  test_audio_processor.py  test_voice_manager.py
backend/utils/: logger.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  entrypoint.sh  healthcheck.sh  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: AudioPlayer.tsx  Button.tsx  Card.tsx  Dropzone.tsx  LoadingSpinner.tsx  ProgressBar.tsx
frontend/src/pages/: HomePage.tsx  SettingsPage.tsx  TTSPage.tsx  VoiceClonePage.tsx  VoicesPage.tsx
frontend/src/store/: useSettingsStore.ts  useTTSStore.ts  useVoiceStore.ts
frontend/src/test/: setup.ts
frontend/src/test/mocks/: handlers.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
scripts/: backup.sh  deploy.sh  setup.sh
